[gd_scene load_steps=34 format=3 uid="uid://dmb5cs8occw40"]

[ext_resource type="Script" path="res://GameElements/Screens/QuestManager.gd" id="1_cbipq"]
[ext_resource type="Shader" path="res://Shaders/sokpop.gdshader" id="2_oylf7"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2_vhosp"]
[ext_resource type="Script" path="res://GameElements/Skills/outside_click_control.gd" id="3_08fxp"]
[ext_resource type="Texture2D" uid="uid://dubvh5jsaaofj" path="res://Shaders/normal.jpg" id="3_x2faw"]
[ext_resource type="Texture2D" uid="uid://ct73cjbbcufdq" path="res://Assets/UI/screen_background.png" id="4_0jndw"]
[ext_resource type="Texture2D" uid="uid://ispx11saoeqv" path="res://Assets/UI/map_selection_button/star_locked.png" id="8_t1y7u"]
[ext_resource type="PackedScene" uid="uid://ccbpp75ye3ttb" path="res://GameElements/transition_layer.tscn" id="13_mn7lt"]
[ext_resource type="AudioStream" uid="uid://dmx1hkywmtllv" path="res://Assets/audio/click_001.ogg" id="14_l6oou"]
[ext_resource type="Script" path="res://GameElements/Screens/difficulty_selection_screen.gd" id="14_mljd0"]
[ext_resource type="Texture2D" uid="uid://cehi8kawggg86" path="res://Assets/UI/challenge_selection/easy.png" id="15_c4h71"]
[ext_resource type="Texture2D" uid="uid://dqm25tjavdpqs" path="res://Assets/UI/challenge_selection/easy_click.png" id="16_g20c2"]
[ext_resource type="Texture2D" uid="uid://crupdevsepf26" path="res://Assets/UI/challenge_selection/easy_hover.png" id="17_aqhoc"]
[ext_resource type="Texture2D" uid="uid://bkdgvasc5icja" path="res://Assets/UI/challenge_selection/medium.png" id="18_jw0wd"]
[ext_resource type="Texture2D" uid="uid://bm2418lrjknrn" path="res://Assets/UI/challenge_selection/medium_click.png" id="19_1gmvo"]
[ext_resource type="Texture2D" uid="uid://lto2xqiw38uq" path="res://Assets/UI/challenge_selection/medium_hover.png" id="20_s6tpx"]
[ext_resource type="Texture2D" uid="uid://cluijtu07rhch" path="res://Assets/UI/challenge_selection/hard.png" id="21_0sfas"]
[ext_resource type="Texture2D" uid="uid://xtm4qtmg4b6x" path="res://Assets/UI/challenge_selection/hard_click.png" id="22_dwjka"]
[ext_resource type="Texture2D" uid="uid://cqfjrd2ecasj0" path="res://Assets/UI/challenge_selection/hard_hover.png" id="23_w8i7k"]
[ext_resource type="Texture2D" uid="uid://bf8en5nqacd3n" path="res://Assets/UI/challenge_selection/infinity.png" id="24_ydng7"]
[ext_resource type="Texture2D" uid="uid://qdjoufhbmbwu" path="res://Assets/UI/challenge_selection/infinity_click.png" id="25_6f3jd"]
[ext_resource type="Texture2D" uid="uid://ccpguq742vhrn" path="res://Assets/UI/challenge_selection/infinity_hover.png" id="26_ftmqe"]
[ext_resource type="Texture2D" uid="uid://cfqfijc5h8pqy" path="res://Assets/UI/map_selection_button/quest_background.png" id="26_ik3b4"]
[ext_resource type="Texture2D" uid="uid://bxy75davaj2n4" path="res://Assets/NPC/Harold.png" id="28_xqvrq"]
[ext_resource type="Texture2D" uid="uid://cahuuxwk45jot" path="res://Assets/UI/challenge_selection/back.png" id="29_0jbdu"]
[ext_resource type="Texture2D" uid="uid://lrqcr411i8sd" path="res://Assets/UI/challenge_selection/back_click.png" id="30_lxh2v"]
[ext_resource type="Texture2D" uid="uid://bkqv2ykx8m0a0" path="res://Assets/UI/challenge_selection/back_hover.png" id="31_c2vk1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cwhr8"]
shader = ExtResource("2_vhosp")
shader_parameter/lod = 1.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ygnxb"]
shader = ExtResource("2_oylf7")
shader_parameter/strength = 0.002
shader_parameter/speed = 6.0
shader_parameter/frames = 6
shader_parameter/flowMap = ExtResource("3_x2faw")

[sub_resource type="Animation" id="Animation_6u30e"]
resource_name = "show_quests_lists"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Harold:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.287175, 0.287175),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 0.287175, 0.287175),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7i47a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Harold:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_keiu3"]
resource_name = "hide_quests_lists"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.225312, 0.225312),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Harold:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gnqic"]
_data = {
"RESET": SubResource("Animation_7i47a"),
"hide_quests_lists": SubResource("Animation_keiu3"),
"show_quests_lists": SubResource("Animation_6u30e")
}

[node name="SelectMapScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
visible = false
script = ExtResource("1_cbipq")

[node name="Control" type="ColorRect" parent="." node_paths=PackedStringArray("player")]
material = SubResource("ShaderMaterial_cwhr8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_08fxp")
player = NodePath("../AnimationPlayer")
animation_name = "hide_quests_lists"

[node name="Harold" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(1718.25, 878.25)
scale = Vector2(0.937647, 1.01567)
texture = ExtResource("28_xqvrq")

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_l6oou")
volume_db = -5.0

[node name="SelectDifficultyScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 3
visible = false
script = ExtResource("14_mljd0")

[node name="TextureRect" type="TextureRect" parent="SelectDifficultyScreen"]
material = SubResource("ShaderMaterial_ygnxb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -72.0
offset_right = 215.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_0jndw")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SelectDifficultyScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="EasyButton" type="TextureButton" parent="SelectDifficultyScreen/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("15_c4h71")
texture_pressed = ExtResource("16_g20c2")
texture_hover = ExtResource("17_aqhoc")

[node name="MarginContainer" type="MarginContainer" parent="SelectDifficultyScreen/VBoxContainer/EasyButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -49.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30

[node name="EasyStar" type="TextureRect" parent="SelectDifficultyScreen/VBoxContainer/EasyButton/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_t1y7u")

[node name="MediumButton" type="TextureButton" parent="SelectDifficultyScreen/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_jw0wd")
texture_pressed = ExtResource("19_1gmvo")
texture_hover = ExtResource("20_s6tpx")

[node name="MarginContainer" type="MarginContainer" parent="SelectDifficultyScreen/VBoxContainer/MediumButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -49.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30

[node name="MediumStar" type="TextureRect" parent="SelectDifficultyScreen/VBoxContainer/MediumButton/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_t1y7u")

[node name="HardButton" type="TextureButton" parent="SelectDifficultyScreen/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("21_0sfas")
texture_pressed = ExtResource("22_dwjka")
texture_hover = ExtResource("23_w8i7k")

[node name="MarginContainer" type="MarginContainer" parent="SelectDifficultyScreen/VBoxContainer/HardButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -49.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30

[node name="HardStar" type="TextureRect" parent="SelectDifficultyScreen/VBoxContainer/HardButton/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("8_t1y7u")

[node name="InfinityButton" type="TextureButton" parent="SelectDifficultyScreen/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("24_ydng7")
texture_pressed = ExtResource("25_6f3jd")
texture_hover = ExtResource("26_ftmqe")

[node name="TransitionLayer" parent="SelectDifficultyScreen" instance=ExtResource("13_mn7lt")]
unique_name_in_owner = true
layer = 20

[node name="MarginContainer" type="MarginContainer" parent="SelectDifficultyScreen"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_bottom = 32

[node name="BackButton" type="TextureButton" parent="SelectDifficultyScreen/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("29_0jbdu")
texture_pressed = ExtResource("30_lxh2v")
texture_hover = ExtResource("31_c2vk1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 98.0
offset_top = 69.0
offset_right = 1659.0
offset_bottom = 830.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(1550, 740)
size_flags_horizontal = 4
texture = ExtResource("26_ik3b4")

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 567.0
grow_horizontal = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 200

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/MarginContainer2"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="QuestContainer" type="HBoxContainer" parent="TextureRect/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_right = 386.0
grow_vertical = 0
theme_override_constants/margin_left = 82
theme_override_constants/margin_bottom = 64

[node name="BackButton" type="TextureButton" parent="TextureRect/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("29_0jbdu")
texture_pressed = ExtResource("30_lxh2v")
texture_hover = ExtResource("31_c2vk1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gnqic")
}

[connection signal="gui_input" from="Control" to="Control" method="_on_gui_input"]
[connection signal="pressed" from="SelectDifficultyScreen/VBoxContainer/EasyButton" to="SelectDifficultyScreen" method="_on_easy_button_pressed"]
[connection signal="pressed" from="SelectDifficultyScreen/VBoxContainer/MediumButton" to="SelectDifficultyScreen" method="_on_medium_button_pressed"]
[connection signal="pressed" from="SelectDifficultyScreen/VBoxContainer/HardButton" to="SelectDifficultyScreen" method="_on_hard_button_pressed"]
[connection signal="pressed" from="SelectDifficultyScreen/VBoxContainer/InfinityButton" to="SelectDifficultyScreen" method="_on_infinity_button_pressed"]
[connection signal="transition_is_finished" from="SelectDifficultyScreen/TransitionLayer" to="SelectDifficultyScreen" method="_on_transition_layer_transition_is_finished"]
[connection signal="pressed" from="SelectDifficultyScreen/MarginContainer/BackButton" to="SelectDifficultyScreen" method="_on_back_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
